# wi-editor

./: .ignore  Cargo.toml  README.md  banner.txt  test.txt
src/: app.rs  event.rs  handler.rs  lib.rs  main.rs  mode.rs  tui.rs  utils.rs
src/ui/: dashboard.rs  help_box.rs  mod.rs  search_box.rs  status_line.rs  textarea.rs
