[package]
name = "wi"
version = "0.1.0"
authors = ["Jedsek <jedsek@qq.com>"]
license = "MIT"
edition = "2021"

[profile.release]
opt-level = 2
strip = true
lto = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 2

[dependencies]
crossterm = "0.26.1"
textwrap = "0.16.0"
tui = { package = "ratatui", version = "0.22.0" }
tui-textarea = { path = "../tui-textarea", version = "*", default-features = false, features = ["ratatui-crossterm", "search"]}
